main skeleton, started header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>youtube clone</title>
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/224a7cc79e.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <section class="left">
+        <button><i class="fa-solid fa-bars"></i></button>
+      </section>
+      <section class="middle"></section>
+      <section class="right"></section>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
