--- a/index.html
+++ b/index.html
@@ -14,9 +14,22 @@
     <header>
       <section class="left">
         <button><i class="fa-solid fa-bars"></i></button>
+        <a href="#"><img src="" alt="youtubeLogo" /></a>
       </section>
-      <section class="middle"></section>
-      <section class="right"></section>
+      <section class="middle">
+        <div class="searchbar">
+          <div class="search-bar-left"></div>
+          <div class="search-bar-right">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+        </div>
+        <i class="fa-solid fa-microphone"></i>
+      </section>
+      <section class="right">
+        <i class="fa-regular fa-square-plus"></i>
+        <i class="fa-regular fa-bell"></i>
+        <img src="" alt="profile-pic" />
+      </section>
     </header>
     <main></main>
     <footer></footer>
