started main sec

--- a/index.html
+++ b/index.html
@@ -31,7 +31,34 @@
         <img src="" alt="profile-pic" />
       </section>
     </header>
-    <main></main>
+
+    <main>
+      <section class="sidebar">
+        <a href="#">
+          <span>Ana Sayfa</span>
+        </a>
+        <a href="#">
+          <span>Shorts</span>
+        </a>
+        <a href="#">
+          <span>Abonelikler</span>
+        </a>
+        <a href="#">
+          <span>Siz</span>
+        </a>
+      </section>
+
+      <section class="buttons">
+        <button>Tumu</button>
+        <button>Muzik</button>
+        <button>Canli</button>
+        <button>Oyun</button>
+        <button>Gezi</button>
+        <button>Tasarim</button>
+        <button>Teknoloji</button>
+        <button>Onerilenler</button>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
