videos section done

--- a/index.html
+++ b/index.html
@@ -58,6 +58,65 @@
         <button>Teknoloji</button>
         <button>Onerilenler</button>
       </section>
+
+      <section class="videos">
+        <div class="video-div">
+          <div class="video-top"></div>
+          <div class="video-bottom">
+            <div class="video-bottom-left"></div>
+            <div class="video-bottom-right"></div>
+          </div>
+        </div>
+        <div class="video-div">
+          <div class="video-top"></div>
+          <div class="video-bottom">
+            <div class="video-bottom-left"></div>
+            <div class="video-bottom-right"></div>
+          </div>
+        </div>
+        <div class="video-div">
+          <div class="video-top"></div>
+          <div class="video-bottom">
+            <div class="video-bottom-left"></div>
+            <div class="video-bottom-right"></div>
+          </div>
+        </div>
+        <div class="video-div">
+          <div class="video-top"></div>
+          <div class="video-bottom">
+            <div class="video-bottom-left"></div>
+            <div class="video-bottom-right"></div>
+          </div>
+        </div>
+        <div class="video-div">
+          <div class="video-top"></div>
+          <div class="video-bottom">
+            <div class="video-bottom-left"></div>
+            <div class="video-bottom-right"></div>
+          </div>
+        </div>
+        <div class="video-div">
+          <div class="video-top"></div>
+          <div class="video-bottom">
+            <div class="video-bottom-left"></div>
+            <div class="video-bottom-right"></div>
+          </div>
+        </div>
+        <div class="video-div">
+          <div class="video-top"></div>
+          <div class="video-bottom">
+            <div class="video-bottom-left"></div>
+            <div class="video-bottom-right"></div>
+          </div>
+        </div>
+        <div class="video-div">
+          <div class="video-top"></div>
+          <div class="video-bottom">
+            <div class="video-bottom-left"></div>
+            <div class="video-bottom-right"></div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
