--- a/index.html
+++ b/index.html
@@ -59,62 +59,119 @@
         <button>Onerilenler</button>
       </section>
 
+      <!-- section.videos>(.video-div>(div.video-top>img)+div.(video-bottom>.video-bottom-left>img+.video-bottom-right>p{Video Title}+p{Channel Name}+p{Views + upload date}))*8 -->
       <section class="videos">
         <div class="video-div">
-          <div class="video-top"></div>
-          <div class="video-bottom">
-            <div class="video-bottom-left"></div>
-            <div class="video-bottom-right"></div>
-          </div>
+          <div class="video-top"><img src="" alt="" /></div>
+          <div class=""></div>
+          <video-bottom>
+            <div class="video-bottom-left">
+              <img src="" alt="" />
+              <div class="video-bottom-right">
+                <p>Video Title</p>
+                <p>Channel Name</p>
+                <p>Views + upload date</p>
+              </div>
+            </div>
+          </video-bottom>
         </div>
         <div class="video-div">
-          <div class="video-top"></div>
-          <div class="video-bottom">
-            <div class="video-bottom-left"></div>
-            <div class="video-bottom-right"></div>
-          </div>
+          <div class="video-top"><img src="" alt="" /></div>
+          <div class=""></div>
+          <video-bottom>
+            <div class="video-bottom-left">
+              <img src="" alt="" />
+              <div class="video-bottom-right">
+                <p>Video Title</p>
+                <p>Channel Name</p>
+                <p>Views + upload date</p>
+              </div>
+            </div>
+          </video-bottom>
         </div>
         <div class="video-div">
-          <div class="video-top"></div>
-          <div class="video-bottom">
-            <div class="video-bottom-left"></div>
-            <div class="video-bottom-right"></div>
-          </div>
+          <div class="video-top"><img src="" alt="" /></div>
+          <div class=""></div>
+          <video-bottom>
+            <div class="video-bottom-left">
+              <img src="" alt="" />
+              <div class="video-bottom-right">
+                <p>Video Title</p>
+                <p>Channel Name</p>
+                <p>Views + upload date</p>
+              </div>
+            </div>
+          </video-bottom>
         </div>
         <div class="video-div">
-          <div class="video-top"></div>
-          <div class="video-bottom">
-            <div class="video-bottom-left"></div>
-            <div class="video-bottom-right"></div>
-          </div>
+          <div class="video-top"><img src="" alt="" /></div>
+          <div class=""></div>
+          <video-bottom>
+            <div class="video-bottom-left">
+              <img src="" alt="" />
+              <div class="video-bottom-right">
+                <p>Video Title</p>
+                <p>Channel Name</p>
+                <p>Views + upload date</p>
+              </div>
+            </div>
+          </video-bottom>
         </div>
         <div class="video-div">
-          <div class="video-top"></div>
-          <div class="video-bottom">
-            <div class="video-bottom-left"></div>
-            <div class="video-bottom-right"></div>
-          </div>
+          <div class="video-top"><img src="" alt="" /></div>
+          <div class=""></div>
+          <video-bottom>
+            <div class="video-bottom-left">
+              <img src="" alt="" />
+              <div class="video-bottom-right">
+                <p>Video Title</p>
+                <p>Channel Name</p>
+                <p>Views + upload date</p>
+              </div>
+            </div>
+          </video-bottom>
         </div>
         <div class="video-div">
-          <div class="video-top"></div>
-          <div class="video-bottom">
-            <div class="video-bottom-left"></div>
-            <div class="video-bottom-right"></div>
-          </div>
+          <div class="video-top"><img src="" alt="" /></div>
+          <div class=""></div>
+          <video-bottom>
+            <div class="video-bottom-left">
+              <img src="" alt="" />
+              <div class="video-bottom-right">
+                <p>Video Title</p>
+                <p>Channel Name</p>
+                <p>Views + upload date</p>
+              </div>
+            </div>
+          </video-bottom>
         </div>
         <div class="video-div">
-          <div class="video-top"></div>
-          <div class="video-bottom">
-            <div class="video-bottom-left"></div>
-            <div class="video-bottom-right"></div>
-          </div>
+          <div class="video-top"><img src="" alt="" /></div>
+          <div class=""></div>
+          <video-bottom>
+            <div class="video-bottom-left">
+              <img src="" alt="" />
+              <div class="video-bottom-right">
+                <p>Video Title</p>
+                <p>Channel Name</p>
+                <p>Views + upload date</p>
+              </div>
+            </div>
+          </video-bottom>
         </div>
         <div class="video-div">
-          <div class="video-top"></div>
-          <div class="video-bottom">
-            <div class="video-bottom-left"></div>
-            <div class="video-bottom-right"></div>
-          </div>
+          <div class="video-top"><img src="" alt="" /></div>
+          <div class=""></div>
+          <video-bottom>
+            <div class="video-bottom-left">
+              <img src="" alt="" />
+              <div class="video-bottom-right">
+                <p>Video Title</p>
+                <p>Channel Name</p>
+                <p>Views + upload date</p>
+              </div>
+            </div>
+          </video-bottom>
         </div>
       </section>
     </main>
