--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         <button>Onerilenler</button>
       </section>
 
-      <!-- section.videos>(.video-div>(div.video-top>img)+div.(video-bottom>.video-bottom-left>img+.video-bottom-right>p{Video Title}+p{Channel Name}+p{Views + upload date}))*8 -->
+      <!-- My shorthand for the videos section
+         section.videos>(.video-div>(div.video-top>img)+div.(video-bottom>.video-bottom-left>img+.video-bottom-right>p{Video Title}+p{Channel Name}+p{Views + upload date}))*8 -->
       <section class="videos">
         <div class="video-div">
           <div class="video-top"><img src="" alt="" /></div>
