--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="middle">
         <div class="searchbar">
           <div class="search-bar-left">
-            <input type="text" />
+            <input type="text" placeholder="Ara" />
           </div>
           <div class="search-bar-right">
             <i class="fa-solid fa-magnifying-glass"></i>
