--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <header>
       <section class="left">
         <button><i class="fa-solid fa-bars"></i></button>
-        <a href="#"><img src="" alt="youtubeLogo" /></a>
+        <a href="#"
+          ><img src="" alt="youtubeLogo" /><img src="./YTlogo.svg" alt=""
+        /></a>
       </section>
 
       <section class="middle">
