--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <section class="left">
         <button><i class="fa-solid fa-bars"></i></button>
         <a href="#"
-          ><img src="" alt="youtubeLogo" /><img src="./YTlogo.svg" alt=""
+          ><img src="" alt="youtubeLogo" /><img src="./YTlogo2.svg" alt=""
         /></a>
       </section>
 
