--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <header>
       <section class="left">
         <button><i class="fa-solid fa-bars"></i></button>
-        <a href="#"
-          ><img src="" alt="youtubeLogo" /><img src="./YTlogo2.svg" alt=""
-        /></a>
+        <a href="#"><img src="./YTlogo2.svg" alt="yt logo" /></a>
       </section>
 
       <section class="middle">
