--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <header>
       <section class="left">
         <button><i class="fa-solid fa-bars"></i></button>
-        <a href="#"><img src="./YTlogo2.svg" alt="yt logo" /></a>
+        <a href="#" class="youtube_logo"
+          ><img src="./YTlogo2.svg" alt="yt logo"
+        /></a>
       </section>
 
       <section class="middle">
