removed unneeded code

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <section class="left">
         <button><i class="fa-solid fa-bars"></i></button>
-        <a href="#" class="youtube_logo" id="mainlogo"
+        <a href="#" class="youtube_logo"
           ><img src="./YTlogo2.svg" alt="yt logo"
         /></a>
       </section>
