--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             <div class="video-bottom-left">
               <img src="" alt="" />
               <div class="video-bottom-right">
-                <p>Video Title</p>
-                <p>Channel Name</p>
-                <p>Views + upload date</p>
+                <p>First Video</p>
+                <p>First Channel</p>
+                <p>1000 views 1 day ago</p>
               </div>
             </div>
           </video-bottom>
