--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="video-bottom-left">
               <img src="" alt="" />
               <div class="video-bottom-right">
-                <p>Video Title</p>
+                <p>Second Video</p>
                 <p>Channel Name</p>
                 <p>Views + upload date</p>
               </div>
