--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
               <img src="" alt="" />
               <div class="video-bottom-right">
                 <p>Second Video</p>
-                <p>Channel Name</p>
-                <p>Views + upload date</p>
+                <p>Second Channel</p>
+                <p>2000 views + 3 days ago</p>
               </div>
             </div>
           </video-bottom>
