--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
             <div class="video-bottom-left">
               <img src="" alt="" />
               <div class="video-bottom-right">
-                <p>Video Title</p>
-                <p>Channel Name</p>
-                <p>Views + upload date</p>
+                <p>Third Video</p>
+                <p>Third Channel</p>
+                <p>12342 views + a week ago</p>
               </div>
             </div>
           </video-bottom>
