--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
             <div class="video-bottom-left">
               <img src="" alt="" />
               <div class="video-bottom-right">
-                <p>Video Title</p>
-                <p>Channel Name</p>
+                <p>Fourth video</p>
+                <p>Fourth channel</p>
                 <p>Views + upload date</p>
               </div>
             </div>
