--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <div class="video-bottom-right">
                 <p>Fourth video</p>
                 <p>Fourth channel</p>
-                <p>Views + upload date</p>
+                <p>234212 views a month ago</p>
               </div>
             </div>
           </video-bottom>
