--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <div class="video-bottom-right">
                 <p>fifth video</p>
                 <p>fifth channel</p>
-                <p>Views + upload date</p>
+                <p>10k views a week ago</p>
               </div>
             </div>
           </video-bottom>
